kubernetes/images-uploader.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: efs-csi-demo
---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: efs-csi-demo
  name: efs-app-sts
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: images-uploader
  serviceName: efs-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: images-uploader
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: linux
        image: jmanzur/images-uploader:latest
        volumeMounts:
        - name: efs-storage
          mountPath: /usr/src/app/images
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: efs-claim
---
# Service
apiVersion: v1
kind: Service
metadata:
  namespace: efs-csi-demo
  name: service-images-uploader
spec:
  ports:
    - port: 80
      targetPort: 8889
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: images-uploader
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: efs-csi-demo
  name: ingress-images-uploader
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-images-uploader
              port:
                number: 80
